--- a/index.html
+++ b/index.html
@@ -1,51 +1,199 @@
+Below is a **single-file HTML surprise page** that does exactly what you want:
+
+• QR opens page
+• Countdown **3 → 2 → 1**
+• Night background 🌙 with moon & flowers 🌸
+• Dancing teddy 🧸 with floating hearts 💖
+• Text: **"I have something special for you, Naina ✨"**
+• Button to redirect to next page
+
+---
+
+## ✅ How to use
+
+1. Save this as **index.html**
+2. Push to GitHub repo
+3. Enable **GitHub Pages**
+4. QR must point to:
+   [https://operate12.github.io/birthday/](https://operate12.github.io/birthday/)
+
+---
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday 🎉</title>
+<title>Surprise ✨</title>
+
 <style>
-    body {
-        margin: 0;
-        font-family: 'Segoe UI', sans-serif;
-        background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        text-align: center;
-        color: #fff;
-    }
-    .card {
-        background: rgba(0,0,0,0.25);
-        padding: 25px;
-        border-radius: 16px;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-        max-width: 90%;
-    }
-    h1 {
-        font-size: 2.2rem;
-        margin-bottom: 10px;
-    }
-    p {
-        font-size: 1.1rem;
-        line-height: 1.6;
-    }
-    .emoji {
-        font-size: 2.5rem;
-    }
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Segoe UI', sans-serif;
+    overflow: hidden;
+}
+
+/* Countdown */
+#countdown {
+    position: fixed;
+    inset: 0;
+    background: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5rem;
+    z-index: 10;
+}
+
+/* Main Scene */
+#scene {
+    display: none;
+    height: 100vh;
+    background: linear-gradient(to top, #020111, #191970);
+    color: white;
+    text-align: center;
+}
+
+/* Moon */
+.moon {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 90px;
+    height: 90px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 30px #fff;
+}
+
+/* Flowers */
+.flowers {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-size: 2.2rem;
+}
+
+/* Teddy */
+.teddy {
+    margin-top: 120px;
+    font-size: 6rem;
+    animation: dance 1s infinite alternate;
+}
+
+@keyframes dance {
+    0% { transform: rotate(-5deg) translateY(0); }
+    100% { transform: rotate(5deg) translateY(-10px); }
+}
+
+/* Hearts */
+.heart {
+    position: absolute;
+    color: pink;
+    font-size: 1.2rem;
+    animation: float 3s infinite;
+}
+
+@keyframes float {
+    0% { transform: translateY(0); opacity: 1; }
+    100% { transform: translateY(-120px); opacity: 0; }
+}
+
+/* Message */
+.message {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    padding: 0 20px;
+}
+
+/* Button */
+.next-btn {
+    margin-top: 25px;
+    padding: 12px 26px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 30px;
+    background: #ff69b4;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 0 10px #ff69b4;
+}
+
 </style>
 </head>
+
 <body>
-    <div class="card">
-        <div class="emoji">🎂🎉🎁</div>
-        <h1>Happy Birthday!</h1>
-        <p>
-            Wishing you a day filled with happiness,  
-            laughter, and beautiful moments.  
-            May all your dreams come true! 💖
-        </p>
-        <p>— From Someone Special 😊</p>
+
+<div id="countdown">3</div>
+
+<div id="scene">
+    <div class="moon"></div>
+
+    <div class="teddy">🧸</div>
+
+    <div class="message">
+        💖💖💖<br>
+        I have something special for you, <b>Naina ✨</b>
     </div>
+
+    <button class="next-btn" onclick="goNext()">Tap for Next Surprise 💝</button>
+
+    <div class="flowers">🌸 🌷 🌺 🌸 🌷 🌺</div>
+</div>
+
+<script>
+let count = 3;
+const cd = document.getElementById('countdown');
+const scene = document.getElementById('scene');
+
+const timer = setInterval(() => {
+    count--;
+    if (count === 0) {
+        clearInterval(timer);
+        cd.style.display = 'none';
+        scene.style.display = 'block';
+        startHearts();
+    } else {
+        cd.innerText = count;
+    }
+}, 1000);
+
+function startHearts() {
+    setInterval(() => {
+        const heart = document.createElement('div');
+        heart.className = 'heart';
+        heart.innerText = '❤';
+        heart.style.left = Math.random() * 100 + 'vw';
+        heart.style.bottom = '0px';
+        document.body.appendChild(heart);
+        setTimeout(() => heart.remove(), 3000);
+    }, 400);
+}
+
+function goNext() {
+    window.location.href = "next.html"; // change if needed
+}
+</script>
+
 </body>
 </html>
+```
+
+---
+
+## 🌟 Optional Next Page
+
+Create **next.html** for final birthday wishes, photos, music, etc.
+
+If you want, I can:
+• Add 🎶 background music
+• Add 🌌 stars animation
+• Replace teddy with GIF
+• Customize text & colors
+• Build next.html surprise
+
+Just tell me 💝
