--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function fireflies(){
  },800);
 }
 
-function goNext(){window.location.href='next.html'}
+function goNext(){window.location.href='next.html?celebrate=1'}
 </script>
 </body>
 </html>
