--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@ html,body{
 </head>
 <body>
 
-<div id="countdown">3</div>
+<div id="countdown">3...</div>
 
 <div id="scene">
  <div class="moon"></div>
 
  <!-- Working Lottie Teddy holding heart -->
- <div class="teddy">
-  <lottie-player
-    src="https://assets10.lottiefiles.com/packages/lf20_zl0t27qv.json"
-    background="transparent"
-    speed="1"
-    loop
-    autoplay>
-  </lottie-player>
- </div>
+ <!-- <div class="teddy"> -->
+  <!-- <lottie-player -->
+    <!-- src="https://assets10.lottiefiles.com/packages/lf20_zl0t27qv.json" -->
+    <!-- background="transparent" -->
+    <!-- speed="1" -->
+    <!-- loop -->
+    <!-- autoplay> -->
+  <!-- </lottie-player> -->
+ <!-- </div> -->
 
  <div class="message">
   💖 I have something special for you,<br>
