--- a/next.html
+++ b/next.html
@@ -1,43 +1,95 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>One More Thing 💖</title>
+<title>Romantic Celebration 🎉</title>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 <style>
-html,body{
- margin:0; height:100%; background:#020111; color:white;
- display:flex; justify-content:center; align-items:center;
- font-family:'Segoe UI',sans-serif; text-align:center;
+body,html{
+ margin:0;padding:0;width:100%;height:100%;
+ display:flex;flex-direction:column;justify-content:center;align-items:center;
+ background: linear-gradient(to top, #ffb6c1, #ff69b4);
+ font-family:'Dancing Script', cursive;
+ overflow:hidden;
+ transition: background 1s ease;
 }
-#card{
- padding:30px; background:rgba(255,255,255,.1);
- border-radius:20px; box-shadow:0 0 30px pink;
+h1{font-size:3rem;color:#fff;margin-bottom:10px;text-shadow:2px 2px 10px #000;}
+p{font-size:1.5rem;color:#fff;margin-bottom:25px;text-shadow:1px 1px 8px #000;}
+button{padding:15px 40px;font-size:1.2rem;border:none;border-radius:30px;background:#ffeb3b;color:#ff1493;cursor:pointer;box-shadow:0 0 20px #ff1493;margin-bottom:20px;transition:transform 0.2s;}
+button:hover{transform:scale(1.1);}
+
+.blast, .balloon, .heart{
+ position:absolute;
+ border-radius:50%;
+ animation:blast 1s ease-out forwards;
 }
-.hidden{display:none}
-button{
- margin-top:20px; padding:12px 30px;
- border:none; border-radius:30px;
- background:#ff69b4; color:white; font-size:1rem;
-}
+
+.blast{width:20px;height:20px;background:;}
+.balloon{width:30px;height:40px;background:red;border-radius:50% 50% 50% 50%;animation:floatBalloon 4s linear forwards;}
+.heart{width:20px;height:20px;background:pink;clip-path:polygon(50% 0%, 100% 35%, 80% 100%, 50% 80%, 20% 100%, 0% 35%);}
+
+@keyframes blast{0%{opacity:1;transform:scale(1) translate(0,0);}100%{opacity:0;transform:scale(2) translate(var(--x),var(--y));}}
+@keyframes floatBalloon{0%{opacity:1;transform:translate(0,0);}100%{opacity:1;transform:translate(var(--bx),-500px);}}
+@keyframes floatHeart{0%{opacity:1;transform:translate(0,0);}100%{opacity:1;transform:translate(var(--hx),-400px) rotate(360deg);}}
 </style>
 </head>
 <body>
-<div id="card">
- <h2>Tap to Reveal 🎁</h2>
- <button onclick="reveal()">Tap 💝</button>
- <div id="msg" class="hidden">
-  <h1>🎂 Happy Birthday Naina ✨</h1>
-  <p>You make everything brighter just by being you 💖</p>
- </div>
-</div>
+
+<h1>Time to Celebrate! 😎</h1>
+<p>The countdown is over... </p>
+<button onclick="goToCake()">Let's Celebrate 🎉🎉</button>
+<p>Let's make this moment magical ✨</p>
+
 <script>
-function reveal(){
- document.querySelector('button').remove();
- document.getElementById('msg').classList.remove('hidden');
+// Check URL parameter
+const urlParams = new URLSearchParams(window.location.search);
+if(urlParams.get('celebrate')==='1'){
+    startCelebration();
+}
+
+function startCelebration(){
+    // Background glow
+    document.body.style.background='linear-gradient(to top, #ffb6c1, #ff69b4)';
+
+    // Blasts
+    for(let i=0;i<50;i++){
+        let blast=document.createElement('div');
+        blast.className='blast';
+        let angle=Math.random()*2*Math.PI;
+        let distance=Math.random()*300+50;
+        blast.style.setProperty('--x',Math.cos(angle)*distance+'px');
+        blast.style.setProperty('--y',Math.sin(angle)*distance+'px');
+        document.body.appendChild(blast);
+        setTimeout(()=>blast.remove(),1000);
+    }
+
+    // Balloons
+    for(let i=0;i<20;i++){
+        let balloon=document.createElement('div');
+        balloon.className='balloon';
+        balloon.style.left=Math.random()*100+'vw';
+        let bx=Math.random()*200-100+'px';
+        balloon.style.setProperty('--bx',bx);
+        document.body.appendChild(balloon);
+        setTimeout(()=>balloon.remove(),4000);
+    }
+
+    // Floating Hearts
+    for(let i=0;i<30;i++){
+        let heart=document.createElement('div');
+        heart.className='heart';
+        heart.style.left=Math.random()*100+'vw';
+        let hx=Math.random()*200-100+'px';
+        heart.style.setProperty('--hx',hx);
+        document.body.appendChild(heart);
+        setTimeout(()=>heart.remove(),4000);
+    }
+}
+
+function goToCake(){
+    window.location.href='cake.html';
 }
 </script>
 </body>
 </html>
-
