--- a/cake.html
+++ b/cake.html
@@ -3,106 +3,174 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Naina 🌙</title>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<title>For Naina ✨</title>
+
 <style>
-body,html{
- margin:0; padding:0; width:100%; height:100%;
- display:flex; flex-direction:column; justify-content:center; align-items:center;
- background: linear-gradient(to top, #ffe6f0, #ffb6c1);
- font-family:'Dancing Script', cursive;
- overflow:hidden;
- position:relative;
+*{box-sizing:border-box}
+html,body{
+ margin:0; padding:0; width:100%; height:100%; overflow:hidden;
+ font-family:'Segoe UI',sans-serif;
+ background: linear-gradient(to top, #2c3e70, #020111);
 }
 
-h1{
- font-size:3rem; color:#fff; text-shadow:2px 2px 10px #000; margin:10px 0 5px 0;
- text-align:center;
-}
-p{
- font-size:1.5rem; color:#fff; margin:5px 0 25px 0; text-shadow:1px 1px 6px #000; text-align:center;
-}
-button{
- padding:15px 40px; font-size:1.2rem; border:none; border-radius:30px;
- background:#ffeb3b; color:#ff1493; cursor:pointer; box-shadow:0 0 20px #ff1493;
- z-index:10;
+/* Countdown */
+#countdown{
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 6rem;
+  font-weight: bold;
+  color: #ffb6c1; /* romantic pink */
+  z-index: 10;
+
+  /* ✅ Same background as body */
+  background: linear-gradient(to top, #2c3e70, #020111);
 }
 
-/* Blast Pops and Balloons */
-.blast, .balloon{
- position:absolute; border-radius:50%;
- animation:blast 1s ease-out forwards;
+/* Scene */
+#scene{
+ display:none; position:fixed; inset:0; min-height:100vh;
+ color:white; text-align:center;
+ display:flex; flex-direction:column;
+ align-items:center; justify-content:center;
 }
-.blast{width:20px; height:20px; background:yellow;}
-.balloon{width:30px; height:40px; background:red; border-radius:50% 50% 50% 50%; animation:floatBalloon 4s linear forwards;}
-@keyframes blast{
- 0% {opacity:1; transform: scale(1) translate(0,0);}
- 100% {opacity:0; transform: scale(2) translate(var(--x), var(--y));}
+
+/* Stars */
+.star{
+ position:absolute; width:2px; height:2px;
+ background:white; opacity:.8;
+ animation:twinkle 2s infinite alternate;
 }
-@keyframes floatBalloon{
- 0% {opacity:1; transform: translate(0,0);}
- 100% {opacity:1; transform: translate(var(--bx), -500px);}
+@keyframes twinkle{from{opacity:.3}to{opacity:1}}
+
+/* Fireflies */
+.firefly{
+ position:absolute; width:6px; height:6px;
+ background:gold; border-radius:50%;
+ box-shadow:0 0 8px gold;
+ animation:fly 6s linear infinite;
+}
+@keyframes fly{
+ from{transform:translateY(0)}
+ to{transform:translateY(-120vh); opacity:0}
+}
+
+/* Moon */
+.moon{
+ position:absolute; top:40px; right:40px;
+ width:90px; height:90px;
+ background:#fff; border-radius:50%;
+ box-shadow:0 0 40px #fff;
+}
+
+/* Teddy Lottie */
+.teddy lottie-player{
+ width:250px; max-width:80vw;
+ animation:float 3s ease-in-out infinite;
+}
+@keyframes float{
+ 0%{transform:translateY(0)}
+ 50%{transform:translateY(-15px)}
+ 100%{transform:translateY(0)}
+}
+
+/* Message */
+.message{
+ margin-top:15px; font-size:1.3rem; padding:0 20px;
+ animation:fadeIn 3s ease forwards;
+ opacity:0;
+}
+@keyframes fadeIn{
+ from{opacity:0} to{opacity:1}
+}
+
+/* Button */
+.next-btn{
+ margin-top:25px; padding:12px 32px;
+ font-size:1rem; border:none;
+ border-radius:30px;
+ background:#ff69b4; color:white;
+ box-shadow:0 0 14px #ff69b4;
+ cursor:pointer;
 }
 </style>
+
+<!-- Lottie Player -->
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
 
-<!-- 3D Cake above the text -->
-<lottie-player 
-    src="https://assets10.lottiefiles.com/packages/lf20_nfb8mnsb.json" 
-    background="transparent" speed="1" style="width:300px; max-width:80vw;" loop autoplay>
-</lottie-player>
+<div id="countdown">3...</div>
 
-<h1>Happy Birthday Naina 🌙</h1>
-<p>It's your special day!</p>
+<div id="scene">
+ <div class="moon"></div>
 
-<button onclick="continueNext()">Continue</button>
+ <!-- Working Lottie Teddy holding heart -->
+ <!-- <div class="teddy"> -->
+  <!-- <lottie-player -->
+    <!-- src="https://assets10.lottiefiles.com/packages/lf20_zl0t27qv.json" -->
+    <!-- background="transparent" -->
+    <!-- speed="1" -->
+    <!-- loop -->
+    <!-- autoplay> -->
+  <!-- </lottie-player> -->
+ <!-- </div> -->
 
-<!-- Background Music -->
+ <div class="message">
+  💖 I have something special for you,<br>
+  <b>Naina ✨</b>
+ </div>
+
+ <button class="next-btn" onclick="goNext()">Tap for Next Surprise 💝</button>
+</div>
+
+<!-- Romantic Music -->
 <audio id="music" loop>
  <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-// Celebration animations
-function startCelebration(){
-    // Play music (requires user interaction on some mobile browsers)
-    const playPromise = document.getElementById('music').play();
-    if(playPromise !== undefined){
-        playPromise.catch(() => { /* user interaction required */ });
-    }
+let count=3;
+const cd=document.getElementById('countdown');
+const scene=document.getElementById('scene');
+const music=document.getElementById('music');
 
-    // Blasts
-    for(let i=0;i<50;i++){
-        let blast = document.createElement('div');
-        blast.className='blast';
-        let angle = Math.random()*2*Math.PI;
-        let distance = Math.random()*300+50;
-        blast.style.setProperty('--x', Math.cos(angle)*distance+'px');
-        blast.style.setProperty('--y', Math.sin(angle)*distance+'px');
-        document.body.appendChild(blast);
-        setTimeout(()=>blast.remove(),1000);
+const interval = setInterval(() => {
+    if(count > 0){
+        cd.innerText = count + '...';
+        count--;
+    } else {
+        clearInterval(interval);
+        cd.style.display = 'none';
+        scene.style.display = 'flex';
+        music.play();
+        stars();
+        fireflies();
     }
-    // Balloons
-    for(let i=0;i<20;i++){
-        let balloon = document.createElement('div');
-        balloon.className='balloon';
-        balloon.style.left = Math.random()*100+'vw';
-        let bx = Math.random()*200-100+'px';
-        balloon.style.setProperty('--bx',bx);
-        document.body.appendChild(balloon);
-        setTimeout(()=>balloon.remove(),4000);
-    }
+}, 1000);
+
+function stars(){
+ for(let i=0;i<80;i++){
+  let s=document.createElement('div'); s.className='star';
+  s.style.left=Math.random()*100+'vw';
+  s.style.top=Math.random()*100+'vh';
+  document.body.appendChild(s);
+ }
 }
 
-// Trigger celebration automatically on page load
-window.onload = startCelebration;
-
-function continueNext(){
-    alert('Continue to next surprise!');
+function fireflies(){
+ setInterval(()=>{
+  let f=document.createElement('div'); f.className='firefly';
+  f.style.left=Math.random()*100+'vw';
+  f.style.bottom='0';
+  document.body.appendChild(f);
+  setTimeout(()=>f.remove(),6000);
+ },800);
 }
+
+function goNext(){window.location.href='next.html?celebrate=1'}
 </script>
-
 </body>
 </html>
