--- a/index.html
+++ b/index.html
@@ -2,31 +2,65 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Romantic Celebration 🎆</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Naina ✨</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box}
 html,body{
- margin:0; padding:0; width:100%; height:100%; overflow:hidden;
- font-family:'Segoe UI',sans-serif;
- background: linear-gradient(to top, #2c3e70, #020111);
+ margin:0;
+ width:100%;
+ height:100%;
+ overflow:hidden;
+ font-family:'Dancing Script',cursive;
+ color:white;
+ background: linear-gradient(to top, #2c3e70, #020111); /* SAME AS INDEX */
 }
 
-/* Countdown */
-#countdown{
- position:fixed; inset:0; background:black; color:white;
- display:flex; align-items:center; justify-content:center;
- font-size:5rem; z-index:10;
+/* Fireworks canvas */
+canvas{
+ position:fixed;
+ inset:0;
+ pointer-events:none;
+ z-index:1;
 }
 
-/* Scene */
-#scene{
- display:none; position:fixed; inset:0; min-height:100vh;
- color:white; text-align:center;
- display:flex; flex-direction:column;
- align-items:center; justify-content:center;
+/* Center content */
+.center{
+ position:absolute;
+ inset:0;
+ display:flex;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+ text-align:center;
+ z-index:5;
 }
+
+h1{
+ font-size:3rem;
+ text-shadow:2px 2px 15px #000;
+}
+
+p{
+ font-size:1.5rem;
+ text-shadow:1px 1px 8px #000;
+}
+
+button{
+ margin-top:20px;
+ padding:15px 40px;
+ font-size:1.2rem;
+ border:none;
+ border-radius:30px;
+ background:#ff69b4;
+ color:white;
+ cursor:pointer;
+ box-shadow:0 0 20px #ff1493;
+ transition:.2s;
+}
+button:hover{transform:scale(1.1)}
 
 /* Stars */
 .star{
@@ -36,108 +70,103 @@ html,body{
 }
 @keyframes twinkle{from{opacity:.3}to{opacity:1}}
 
-/* Fireflies */
-.firefly{
- position:absolute; width:6px; height:6px;
- background:gold; border-radius:50%;
- box-shadow:0 0 8px gold;
- animation:fly 6s linear infinite;
+/* Balloons */
+.balloon{
+ position:absolute;
+ width:32px;
+ height:45px;
+ border-radius:50%;
+ animation: floatBalloon 9s linear forwards;
+ z-index:3;
 }
-@keyframes fly{
+
+@keyframes floatBalloon{
  from{transform:translateY(0)}
- to{transform:translateY(-120vh); opacity:0}
-}
-
-/* Moon */
-.moon{
- position:absolute; top:40px; right:40px;
- width:90px; height:90px;
- background:#fff; border-radius:50%;
- box-shadow:0 0 40px #fff;
-}
-
-/* Teddy Lottie */
-.teddy lottie-player{
- width:250px; max-width:80vw;
- animation:float 3s ease-in-out infinite;
-}
-@keyframes float{
- 0%{transform:translateY(0)}
- 50%{transform:translateY(-15px)}
- 100%{transform:translateY(0)}
-}
-
-/* Message */
-.message{
- margin-top:15px; font-size:1.3rem; padding:0 20px;
- animation:fadeIn 3s ease forwards;
- opacity:0;
-}
-@keyframes fadeIn{
- from{opacity:0} to{opacity:1}
-}
-
-/* Button */
-.next-btn{
- margin-top:25px; padding:12px 32px;
- font-size:1rem; border:none;
- border-radius:30px;
- background:#ff69b4; color:white;
- box-shadow:0 0 14px #ff69b4;
- cursor:pointer;
+ to{transform:translateY(-120vh)}
 }
 </style>
-
-<!-- Lottie Player -->
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
+
 <body>
 
-<div id="countdown">3...</div>
+<!-- Fireworks -->
+<canvas id="fireworks"></canvas>
 
-<div id="scene">
- <div class="moon"></div>
-
- <!-- Working Lottie Teddy holding heart -->
- <!-- <div class="teddy"> -->
-  <!-- <lottie-player -->
-    <!-- src="https://assets10.lottiefiles.com/packages/lf20_zl0t27qv.json" -->
-    <!-- background="transparent" -->
-    <!-- speed="1" -->
-    <!-- loop -->
-    <!-- autoplay> -->
-  <!-- </lottie-player> -->
- <!-- </div> -->
-
- <div class="message">
-  💖 I have something special for you,<br>
-  <b>Naina ✨</b>
- </div>
-
- <button class="next-btn" onclick="goNext()">Tap for Next Surprise 💝</button>
+<!-- Text (UNCHANGED) -->
+<div class="center">
+ <h1>Time to Celebrate! 🎉</h1>
+ <p>The countdown is over...</p>
+ <button onclick="goToCake()">Let's Celebrate 💖</button>
+ <p>Enjoy this magical moment ✨</p>
 </div>
 
-<!-- Romantic Music -->
-<audio id="music" loop>
- <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3" type="audio/mpeg">
+<!-- Music -->
+<audio autoplay loop>
+ <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3">
+</audio>
+
+<!-- Firework blast sound -->
+<audio id="boom">
+ <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_1b6d6f6b2f.mp3">
 </audio>
 
 <script>
-let count=3;
-const cd=document.getElementById('countdown');
-const scene=document.getElementById('scene');
-const music=document.getElementById('music');
+/* ================= REAL FIREWORKS ================= */
+const canvas = document.getElementById("fireworks");
+const ctx = canvas.getContext("2d");
+canvas.width = innerWidth;
+canvas.height = innerHeight;
 
-setInterval(()=>{
- count--;
- if(count===0){
-  cd.style.display='none';
-  scene.style.display='flex';
-  music.play();
-  stars();
-  fireflies();
- } else cd.innerText=count;
-},1000);
+window.onresize = () => {
+ canvas.width = innerWidth;
+ canvas.height = innerHeight;
+};
+
+const fireworks = [];
+const particles = [];
+stars();
+const boom = document.getElementById("boom");
+
+class Firework {
+ constructor() {
+  this.x = Math.random() * canvas.width;
+  this.y = canvas.height;
+  this.targetY = Math.random() * canvas.height * 0.45 + 80;
+  this.speed = 7;
+ }
+ update() {
+  this.y -= this.speed;
+  if (this.y <= this.targetY) {
+   explode(this.x, this.y);
+   return false;
+  }
+  return true;
+ }
+ draw() {
+  ctx.fillStyle = "white";
+  ctx.fillRect(this.x, this.y, 2, 12);
+ }
+}
+
+class Particle {
+ constructor(x,y,color) {
+  this.x=x;
+  this.y=y;
+  this.angle=Math.random()*Math.PI*2;
+  this.speed=Math.random()*6+2;
+  this.life=90;
+  this.color=color;
+ }
+ update() {
+  this.x+=Math.cos(this.angle)*this.speed;
+  this.y+=Math.sin(this.angle)*this.speed + 0.6;
+  this.life--;
+ }
+ draw() {
+  ctx.fillStyle=this.color;
+  ctx.fillRect(this.x,this.y,3,3);
+ }
+}
 
 function stars(){
  for(let i=0;i<80;i++){
@@ -148,17 +177,54 @@ function stars(){
  }
 }
 
-function fireflies(){
- setInterval(()=>{
-  let f=document.createElement('div'); f.className='firefly';
-  f.style.left=Math.random()*100+'vw';
-  f.style.bottom='0';
-  document.body.appendChild(f);
-  setTimeout(()=>f.remove(),6000);
- },800);
+function explode(x,y){
+ boom.currentTime=0;
+ boom.play();
+
+ const colors=['#ffdd59','#ff69b4','#ff1493','#7efff5','#feca57','#ffffff'];
+ for(let i=0;i<90;i++){
+  particles.push(new Particle(x,y,colors[Math.floor(Math.random()*colors.length)]));
+ }
 }
 
-function goNext(){window.location.href='next.html?celebrate=1'}
+function animate(){
+ ctx.clearRect(0,0,canvas.width,canvas.height);
+
+ fireworks.forEach((fw,i)=>{
+  if(!fw.update()) fireworks.splice(i,1);
+  fw.draw();
+ });
+
+ particles.forEach((p,i)=>{
+  p.update();
+  p.draw();
+  if(p.life<=0) particles.splice(i,1);
+ });
+
+ requestAnimationFrame(animate);
+}
+
+/* Launch fireworks */
+setInterval(()=>fireworks.push(new Firework()),1300);
+animate();
+
+/* ================= BALLOONS (UNCHANGED) ================= */
+const balloonColors=['#ff69b4','#3498db','#f1c40f','#e74c3c','#9b59b6'];
+
+setInterval(()=>{
+ let b=document.createElement('div');
+ b.className='balloon';
+ b.style.background=balloonColors[Math.floor(Math.random()*balloonColors.length)];
+ b.style.left=Math.random()*100+'vw';
+ b.style.bottom='-60px';
+ document.body.appendChild(b);
+ setTimeout(()=>b.remove(),9000);
+},600);
+
+function goToCake(){
+ window.location.href='cake.html';
+}
 </script>
+
 </body>
 </html>
