--- a/next.html
+++ b/next.html
@@ -3,93 +3,179 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Romantic Celebration 🎉</title>
+<title>Happy Birthday Naina 🌙</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
 <style>
-body,html{
- margin:0;padding:0;width:100%;height:100%;
- display:flex;flex-direction:column;justify-content:center;align-items:center;
- background: linear-gradient(to top, #ffb6c1, #ff69b4);
- font-family:'Dancing Script', cursive;
- overflow:hidden;
- transition: background 1s ease;
-}
-h1{font-size:3rem;color:#fff;margin-bottom:10px;text-shadow:2px 2px 10px #000;}
-p{font-size:1.5rem;color:#fff;margin-bottom:25px;text-shadow:1px 1px 8px #000;}
-button{padding:15px 40px;font-size:1.2rem;border:none;border-radius:30px;background:#ffeb3b;color:#ff1493;cursor:pointer;box-shadow:0 0 20px #ff1493;margin-bottom:20px;transition:transform 0.2s;}
-button:hover{transform:scale(1.1);}
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to top, #2c3e70, #020111);
+    font-family: 'Dancing Script', cursive;
+    overflow: hidden;
+    color: white;
+  }
 
-.blast, .balloon, .heart{
- position:absolute;
- border-radius:50%;
- animation:blast 1s ease-out forwards;
-}
+  /* --- Gift Section --- */
+  #gift-container {
+    text-align: center;
+    cursor: pointer;
+    z-index: 20;
+  }
 
-.blast{width:20px;height:20px;background:;}
-.balloon{width:30px;height:40px;background:red;border-radius:50% 50% 50% 50%;animation:floatBalloon 4s linear forwards;}
-.heart{width:20px;height:20px;background:pink;clip-path:polygon(50% 0%, 100% 35%, 80% 100%, 50% 80%, 20% 100%, 0% 35%);}
+  .gift-box {
+    width: 150px;
+    animation: bounce 2s infinite;
+    filter: drop-shadow(0 0 15px #ff69b4);
+  }
 
-@keyframes blast{0%{opacity:1;transform:scale(1) translate(0,0);}100%{opacity:0;transform:scale(2) translate(var(--x),var(--y));}}
-@keyframes floatBalloon{0%{opacity:1;transform:translate(0,0);}100%{opacity:1;transform:translate(var(--bx),-500px);}}
-@keyframes floatHeart{0%{opacity:1;transform:translate(0,0);}100%{opacity:1;transform:translate(var(--hx),-400px) rotate(360deg);}}
+  @keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
+  }
+
+  /* --- Birthday Content (Hidden) --- */
+  #main-content {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 2s ease-in;
+    z-index: 10;
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.8); }
+    to { opacity: 1; transform: scale(1); }
+  }
+
+  /* --- 3-Tier Cake Styling --- */
+  .cake {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 40px;
+  }
+
+  .tier {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #f3e5f5;
+    border-radius: 10px 10px 0 0;
+    box-shadow: inset 0 -5px 0 rgba(0,0,0,0.1);
+  }
+
+  .bottom { width: 150px; height: 60px; bottom: 0; background: #ffc1e3; }
+  .middle { width: 110px; height: 50px; bottom: 50px; background: #f8bbd0; }
+  .top    { width: 70px;  height: 40px; bottom: 95px; background: #f48fb1; }
+
+  .candle-container {
+    position: absolute;
+    top: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 10px;
+  }
+
+  .candle { width: 8px; height: 40px; background: linear-gradient(to bottom, #fff, #ffeb3b); position: relative; }
+  .flame {
+    position: absolute; top: -15px; left: 50%; transform: translateX(-50%);
+    width: 10px; height: 15px; background: orange; border-radius: 50%;
+    box-shadow: 0 0 10px gold; animation: flicker 0.1s infinite alternate;
+  }
+
+  @keyframes flicker {
+    from { transform: translateX(-50%) scale(1); }
+    to { transform: translateX(-50%) scale(1.1) rotate(2deg); }
+  }
+
+  h1 { font-size: 4rem; text-shadow: 2px 2px 12px #000; margin: 10px 0; text-align: center; }
+  p { font-size: 1.5rem; text-shadow: 1px 1px 8px #000; margin-bottom: 30px; }
+
+  button {
+    padding: 15px 40px; font-size: 1.2rem; border: none; border-radius: 30px;
+    background: #ff69b4; color: white; cursor: pointer;
+    box-shadow: 0 0 20px #ff1493; transition: .2s;
+  }
+  button:hover { transform: scale(1.1); }
 </style>
 </head>
 <body>
 
-<h1>Time to Celebrate! 😎</h1>
-<p>The countdown is over... </p>
-<button onclick="goToCake()">Let's Celebrate 🎉🎉</button>
-<p>Let's make this moment magical ✨</p>
+<div id="gift-container" onclick="openGift()">
+    <img src="https://cdn-icons-png.flaticon.com/512/214/214305.png" class="gift-box" alt="Gift">
+    <p>Tap to open your surprise...</p>
+</div>
+
+<div id="main-content">
+    <div class="cake">
+      <div class="candle-container">
+        <div class="candle"><div class="flame"></div></div>
+        <div class="candle"><div class="flame"></div></div>
+        <div class="candle"><div class="flame"></div></div>
+      </div>
+      <div class="tier top"></div>
+      <div class="tier middle"></div>
+      <div class="tier bottom"></div>
+    </div>
+
+    <h1>Happy Birthday Naina 🌙</h1>
+    <p>It's your special day! 💖</p>
+
+    <button onclick="continueNext()">Continue</button>
+</div>
+
+<audio id="music" loop>
+  <source src="https://www.mboxdrive.com/i-think-they-call-this-love.mp3" type="audio/mpeg">
+</audio>
 
 <script>
-// Check URL parameter
-const urlParams = new URLSearchParams(window.location.search);
-if(urlParams.get('celebrate')==='1'){
-    startCelebration();
+function openGift() {
+    // 1. Play Music
+    const music = document.getElementById('music');
+    music.play().catch(e => console.log("Playback blocked"));
+
+    // 2. Hide Gift / Show Cake
+    document.getElementById('gift-container').style.display = 'none';
+    document.getElementById('main-content').style.display = 'flex';
+
+    // 3. Launch Fireworks & Confetti
+    var duration = 5 * 1000;
+    var animationEnd = Date.now() + duration;
+    var defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 0 };
+
+    function randomInRange(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    var interval = setInterval(function() {
+      var timeLeft = animationEnd - Date.now();
+
+      if (timeLeft <= 0) {
+        return clearInterval(interval);
+      }
+
+      var particleCount = 50 * (timeLeft / duration);
+      // Fireworks from left and right
+      confetti(Object.assign({}, defaults, { particleCount, origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 } }));
+      confetti(Object.assign({}, defaults, { particleCount, origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 } }));
+    }, 250);
 }
 
-function startCelebration(){
-    // Background glow
-    document.body.style.background='linear-gradient(to top, #ffb6c1, #ff69b4)';
-
-    // Blasts
-    for(let i=0;i<50;i++){
-        let blast=document.createElement('div');
-        blast.className='blast';
-        let angle=Math.random()*2*Math.PI;
-        let distance=Math.random()*300+50;
-        blast.style.setProperty('--x',Math.cos(angle)*distance+'px');
-        blast.style.setProperty('--y',Math.sin(angle)*distance+'px');
-        document.body.appendChild(blast);
-        setTimeout(()=>blast.remove(),1000);
-    }
-
-    // Balloons
-    for(let i=0;i<20;i++){
-        let balloon=document.createElement('div');
-        balloon.className='balloon';
-        balloon.style.left=Math.random()*100+'vw';
-        let bx=Math.random()*200-100+'px';
-        balloon.style.setProperty('--bx',bx);
-        document.body.appendChild(balloon);
-        setTimeout(()=>balloon.remove(),4000);
-    }
-
-    // Floating Hearts
-    for(let i=0;i<30;i++){
-        let heart=document.createElement('div');
-        heart.className='heart';
-        heart.style.left=Math.random()*100+'vw';
-        let hx=Math.random()*200-100+'px';
-        heart.style.setProperty('--hx',hx);
-        document.body.appendChild(heart);
-        setTimeout(()=>heart.remove(),4000);
-    }
-}
-
-function goToCake(){
-    window.location.href='cake.html';
+function continueNext() {
+    window.location.href = "next.html";
 }
 </script>
+
 </body>
 </html>
